fix searchbar taking too much horizontal space

--- a/client/src/components/ReviewList/styles.css
+++ b/client/src/components/ReviewList/styles.css
@@ -25,7 +25,6 @@
 .searchbarWrapper {
     display: flex;
     align-items: center;
-    min-width: 50%;
 }
 .searchbar {
     box-sizing: border-box;
